<?xml version='1.0' encoding='utf-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.chua</groupId>
        <artifactId>utils-support-parent-starter</artifactId>
        <version>4.0.0.42</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <artifactId>utils-support-gateway-parent</artifactId>
    <packaging>pom</packaging>
    <modules>
        <module>utils-support-remote-starter</module>
        <module>utils-support-remote-agent-starter</module>
        <module>utils-support-remote-desktop-agent-starter</module>
        <module>utils-support-remote-rustdesktop-agent-starter</module>
        <module>utils-support-remote-ssh-agent-starter</module>
        <module>utils-support-remote-socks5-agent-starter</module>
        <module>utils-support-remote-rustdesk-agent-starter</module>
        <module>utils-support-remote-control-starter</module>
    </modules>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>25</release>
                    <compilerArgs>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
